--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
   {{#each todos}}
   <li class="list-group-item">
     <div class="row">
-      <div class="col-auto me-auto">
+      <div class="col-8" style="margin-right: 75px;">
         <input style="vertical-align: middle;" type="checkbox" name="isDone" {{#if this.isDone }} checked {{/if}}
           disabled>
         <h4 style="display: inline; vertical-align: middle;">
